# ctclib

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: decode.rs
bindings/python/: Cargo.toml  pyctclib.pyi  pyproject.toml  test.py
bindings/python/src/: lib.rs  pylm.rs
ctclib-kenlm-sys/: Cargo.toml  README.md  wrapper.cpp
ctclib-kenlm-sys/src/: lib.rs
data/: letter.dict  logit.txt  overfit.arpa
kenlm-sys/: Cargo.toml  build.rs  wrapper.c  wrapper.cpp  wrapper.h
kenlm-sys/src/: lib.rs
src/: decoder.rs  dict.rs  lib.rs  lm.rs
src/decoder/: beamsearch.rs  greedy.rs
src/lm/: kenlm.rs
tests/: decoder_test.rs  kenlm_test.rs
