[package]
edition = "2021"
name = "ctclib"
version = "0.1.0"

[[bench]]
harness = false
name = "decode"

[dependencies]
libm = "~0.2"
pdqselect = "~0.1"
thiserror = "1.0"
ordered-float = "2.0"

[dependencies.dhat]
optional = true
version = "0.3.0"

[dependencies.kenlm-sys]
optional = true
path = "kenlm-sys"
version = "*"

[dev-dependencies]
criterion = "0.3.5"

[features]
default = ["kenlm"]
dhat-heap = ["dhat"]
kenlm = ["kenlm-sys"]