[package]
edition = "2021"
name = "ctclib"
version = "0.1.0"
authors = ["Naomichi Agata <agatan039@gmail.com>"]
license = "MIT"
repository = "https://github.com/agatan/ctclib"
description = "A collection of utilities related to CTC, with the goal of being fast and highly flexible."
readme = "README.md"

[[bench]]
harness = false
name = "decode"

[dependencies]
libm = "~0.2"
pdqselect = "~0.1"
thiserror = "1.0"
ordered-float = "2.0"

[dependencies.dhat]
optional = true
version = "0.3.0"

[dependencies.ctclib-kenlm-sys]
optional = true
path = "ctclib-kenlm-sys"
version = "*"

[dev-dependencies]
criterion = "0.3.5"

[features]
default = ["kenlm"]
dhat-heap = ["dhat"]
kenlm = ["ctclib-kenlm-sys"]