[package]
name = "ctclib-kenlm-sys"
version = "0.1.0"
edition = "2021"
authors = ["Naomichi Agata <agatan039@gmail.com>"]
license = "MIT"
repository = "https://github.com/agatan/ctclib"
description = "Rust bingings to the KenLM"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.59.2"
cc = "1.0.72"
cmake = "0.1.48"
